--- a/app/styles/my/_my-change-password.scss
+++ b/app/styles/my/_my-change-password.scss
@@ -5,6 +5,9 @@
                 width: 90px;
                 padding-left: 20px;
             }
+            .error {
+                margin: 0px 0px 0px 10px;
+            }
         }
         .change-password-btn {
             width: 155px;
@@ -15,6 +18,7 @@
             width: 70px;
         }
         .auth-code-btn {
+            width: 75px;
             margin-top: 5px;
             padding: 0px 10px;
             height: 29px;
