--- a/app/views/account/login.html
+++ b/app/views/account/login.html
@@ -4,7 +4,7 @@
         <div class="left">
             <div class="banner"></div>
         </div>
-        <div class="login-form" ng-key>
+        <div ng-if="!loading" class="login-form">
             <div class="item">
                 <p class="title">使用手机号码登录</p>
             </div>
@@ -12,7 +12,7 @@
                 <input ng-class="{error: user.uiPhoneError}" type="text" wd-placeholder="手机号码" ng-model="user.phone">
             </div>
             <div class="item">
-                <input ng-class="{error: user.uiPasswordError}" type="password" placeholder="登录密码" ng-model="user.password">
+                <input ng-class="{error: user.uiPasswordError}" type="password" wd-placeholder="登录密码" ng-model="user.password">
             </div>
             <div class="item">
                 <p class="error">{{user.uiPhoneError || user.uiPasswordError || user.uiServerError}}</p>
@@ -22,8 +22,11 @@
                 <a href="#/account-register" class="btn register-btn">注册</a>
             </div>
             <div class="item">
-                <a href="">忘记密码？</a>
+                <a href="#/my-change-password">忘记密码？</a>
             </div>
+        </div>
+        <div ng-if="loading" class="login-form">
+            <div wd-loading></div>
         </div>
     </div>
 </div>
