--- a/app/views/my/change-password.html
+++ b/app/views/my/change-password.html
@@ -6,27 +6,37 @@
         <p ng-if="!isLogin" class="h2-title">找回密码</p>
         <div ng-if="!isLogin" class="item">
             <p class="title">手机号码</p>
-            <input type="text">
+            <input type="text" 
+            ng-blur="checkPhone()" 
+            ng-model="userInfo.phone"
+            ng-focus="userInfo.uiPhoneError = '';">
+            <p class="error">{{userInfo.uiPhoneError}}</p>
         </div>
         <div ng-if="!isLogin" class="item">
             <p class="title">短信验证码</p>
-            <input class="code-input" type="password">
+            <input class="code-input" type="text" ng-model="userInfo.code"
+            ng-focus="userInfo.uiCodeError = '';"
+            ng-blur="checkVerifyCode()">
             <div class="btn auth-code-btn">
                 <p ng-if="!uiCountdown" ng-click="verifyPhone();">获取验证码</p>
                 <p ng-if="uiCountdown">{{uiCountdown}} 秒</p>
             </div>
+            <p class="error">{{userInfo.uiCodeError}}</p>
         </div>
         <div ng-if="isLogin" class="item">
             <p class="title">原始密码</p>
-            <input type="password">
+            <input type="password" ng-model="userInfo.pwd" ng-blur="checkPassword()" ng-focus="userInfo.uiPwdError = '';">
+            <p class="error">{{userInfo.uiPwdError}}</p>
         </div>
         <div ng-if="!isLogin" class="item">
             <p class="title">身份证号码</p>
-            <input type="password">
+            <input type="password" ng-model="userInfo.id_no" ng-blur="checkIdNo()" ng-focus="userInfo.uiIdNoError = '';">
+            <p class="error">{{userInfo.uiIdNoError}}</p>
         </div>
         <div class="item">
             <p class="title">新密码</p>
-            <input type="text">
+            <input type="text" ng-model="userInfo.new_pwd" ng-blur="checkNewPassword()" ng-focus="userInfo.uiNewPwdError = '';">
+            <p class="error">{{userInfo.uiNewPwdError}}</p>
         </div>
         <div class="btn change-password-btn">
             <span ng-if="isLogin">修改密码</span>
