--- a/app/styles/about/_nav.scss
+++ b/app/styles/about/_nav.scss
@@ -4,13 +4,13 @@
     left: 0px;
     bottom: 0px;
     width: 230px;
-    border-right: 1px solid $standard-deep-gray;
+    border-right: 1px solid #eaeaea;
     .title {
         height: 40px;
         line-height: 40px;
         background-color: $standard-gray;
         padding-left: 30px;
-        border-top: 1px solid $standard-deep-gray;
+        border-top: 1px solid #eaeaea;
     }
     .item {
         a {
