--- a/app/styles/account/_login.scss
+++ b/app/styles/account/_login.scss
@@ -9,29 +9,33 @@
         }
     }
     .login-form {
+        height: 238px;
+        width: 303px;
         background-color: $standard-white;
         position: absolute;
         top: 30px;
         right: 5%;
-        width: 244px;
-        border: 1px solid $standard-deep-gray;
-        padding: 25px 30px;
-        border-radius: 3px;
+        padding: 30px 32px 25px 27px;
+        border-radius: 2px;
+        @include box-shadow(0px 1px 3px #c8c8c8);
         input {
-            width: 220px;
-            padding: 8px 10px;
+            border: 1px solid #dcdcdc;
+            width: 280px;
+            padding: 11px 10px;
         }
         .title {
             font-size: 18px;
         }
         .item {
-            margin-bottom: 10px;
+            margin-bottom: 16px;
         }
         .login-btn {
-            width: 132px;
+            width: 168px;
+            padding: 10px 14px;
         }
         .register-btn {
-            width: 50px;
+            width: 73px;
+            padding: 10px 14px;
             background-color: $standard-orange;
         }
     }
