--- a/app/styles/account/_open.scss
+++ b/app/styles/account/_open.scss
@@ -3,7 +3,7 @@
     padding: 0px;
     .nav {
         width: 230px;
-        border-right: 1px solid $standard-deep-gray;
+        border-right: 1px solid #ebebeb;
         height: 100%;
         position: absolute;
         top: 0px;
@@ -12,7 +12,6 @@
             height: 40px;
             line-height: 40px;
             padding-left: 10px;
-            border-bottom: 1px solid $standard-deep-gray;
             background-color: $standard-gray;
             a, p {
                 font-size: 16px;
@@ -41,6 +40,7 @@
         }
         .fill-form {
             margin-left: 43px;
+            margin-right: 30px;
             .form-title {
                 margin-top: 28px;
                 padding-bottom: 8px;
@@ -87,7 +87,6 @@
         height: 50px;
         width: 100%;
         background-color: $standard-gray;
-        border-top: 1px solid $standard-deep-gray;
         line-height: 50px;
         .btns {
             float: right;
