--- a/app/styles/common/_body.scss
+++ b/app/styles/common/_body.scss
@@ -2,7 +2,8 @@
     min-width: 960px;
     min-height: 500px;
     width: $page-width;
-    border: 1px solid $standard-deep-gray;
+    border-radius: 2px;
+    border: 1px solid #eaeaea;
     margin: 20px auto 40px auto;
     padding: 30px 0px 50px 0px;
     position: relative;
