--- a/app/styles/common/_header.scss
+++ b/app/styles/common/_header.scss
@@ -7,6 +7,7 @@
         line-height: 36px;
         color: #7D8185;
         a {
+            font-size: 13px;
             color: #7D8185;     
         }
         a, span {
@@ -21,9 +22,12 @@
             .open-btn {
                 color: $standard-white;
                 margin: 3px 0px 0px 0px;
-                padding: 4px 14px;
+                padding: 4px 5px 4px 14px;
                 background-color: $standard-green;
-                border-radius: 2px;
+                .icon-right-angle {
+                    margin-top: 4px;
+                    @include wd-image("icon-right-angle.png");
+                }
             }
         }
     }
@@ -35,13 +39,15 @@
         }
     }
     .nav {
-        height: 40px;
-        line-height: 40px;
+        height: 50px;
+        line-height: 50px;
         background-color: $standard-light-black;
+        border-top: 1px solid #3c3c3c;
         .btn {
+            border-radius: 0px;
             width: 78px;
-            height: 24px;
-            line-height: 24px;
+            height: 34px;
+            line-height: 34px;
             font-size: 18px;
             cursor: pointer;
             background-color: $standard-light-black;
