--- a/app/styles/index/_download.scss
+++ b/app/styles/index/_download.scss
@@ -16,16 +16,16 @@
                 float: left;
                 width: 50%;
                 text-align: center;
-                border-bottom: 2px solid $standard-deep-gray;
+                border-bottom: 1px solid #c8c8c8;
                 margin-bottom: 25px;
                 cursor: pointer;
                 .title {
                     font-size: 20px;
                     margin-bottom: 1px;
-                    @include opacity(0.6);
+                    @include opacity(0.5);
                 }
                 &.active {
-                    border-bottom: 3px solid $standard-blue;
+                    border-bottom: 2px solid $standard-blue;
                     .title {
                         margin-bottom: 0px;
                         @include opacity(1);
@@ -34,6 +34,8 @@
             }
         }
         .block {
+            border-radius: 2px;
+            @include box-shadow(0px 1px 3px #c8c8c8);
             padding-top: 30px;
             cursor: pointer;
             display: inline-block;
