--- a/app/styles/index/_index.scss
+++ b/app/styles/index/_index.scss
@@ -7,15 +7,17 @@
         width: 100%;
     }
     .intro-info {
-        height: 260px;
+        height: 220px;
         padding: 18px 20px 20px 20px;
         .block {
+            border-radius: 2px;
             position: relative;
-            padding-top: 30px;
+            @include box-shadow(0px 1px 3px #c8c8c8);
+            padding-top: 21px;
             cursor: pointer;
             display: inline-block;
             width: 24%;
-            height: 220px;
+            height: 190px;
             text-align: center;
             background-color: $standard-white;
             @include opacity(0.6);
