--- a/app/views/my/change-password.html
+++ b/app/views/my/change-password.html
@@ -39,8 +39,8 @@
             <p class="error">{{userInfo.uiNewPwdError}}</p>
         </div>
         <div class="btn change-password-btn">
-            <span ng-if="isLogin">修改密码</span>
-            <span ng-if="!isLogin">找回密码</span>
+            <span ng-if="isLogin" ng-click="changePassword()">修改密码</span>
+            <span ng-if="!isLogin" ng-click="findPassword()">找回密码</span>
         </div>
     </div>
     <div ng-if="loading" wd-loading></div>
