--- a/app/styles/my/_body.scss
+++ b/app/styles/my/_body.scss
@@ -33,8 +33,19 @@
             }
         }
         .tab-body {
-            padding: 20px 15px;
+            padding: 20px 25px;
+            margin-bottom: 10px;
             border: 1px solid $standard-blue;
+            p {
+                display: block;
+            }
+            .title-name {
+                font-size: 20px;
+            }
+            .title {
+                display: inline-block;
+                width: 130px;
+            }
         }
     }
 }
