--- a/app/styles/common/_footer.scss
+++ b/app/styles/common/_footer.scss
@@ -1,3 +1,10 @@
+/**
+ * @author wangxiao
+ * 
+ * 每位工程师都有保持代码优雅的义务
+ * each engineer has a duty to keep the code elegant
+ */
+
 .wd-footer {
     margin: 0 auto -25px auto;
     min-width: $min-page-width;
