--- a/app/styles/account/_register.scss
+++ b/app/styles/account/_register.scss
@@ -1,3 +1,10 @@
+/**
+ * @author wangxiao
+ * 
+ * 每位工程师都有保持代码优雅的义务
+ * each engineer has a duty to keep the code elegant
+ */
+
 .wd-account-register {
     position: relative;
     .h2-title {
