--- a/app/styles/common/_ng-animation.scss
+++ b/app/styles/common/_ng-animation.scss
@@ -1,3 +1,10 @@
+/**
+ * @author wangxiao
+ * 
+ * 每位工程师都有保持代码优雅的义务
+ * each engineer has a duty to keep the code elegant
+ */
+
 /*
  The animate class is apart of the element and the ng-enter class
  is attached to the element once the enter animation event is triggered
