--- a/app/styles/index/_download.scss
+++ b/app/styles/index/_download.scss
@@ -1,3 +1,10 @@
+/**
+ * @author wangxiao
+ * 
+ * 每位工程师都有保持代码优雅的义务
+ * each engineer has a duty to keep the code elegant
+ */
+
 .wd-download {
     min-width: $min-page-width;
     background-color: $standard-gray;
