--- a/app/styles/my/_body.scss
+++ b/app/styles/my/_body.scss
@@ -1,3 +1,10 @@
+/**
+ * @author wangxiao
+ * 
+ * 每位工程师都有保持代码优雅的义务
+ * each engineer has a duty to keep the code elegant
+ */
+
 .wd-my-body {
     margin-left: 230px;
     padding: 0px 30px 50px 30px;
