--- a/app/views/about/nav.html
+++ b/app/views/about/nav.html
@@ -1,3 +1,12 @@
+<!-- 
+/**
+ * @author wangxiao
+ * 
+ * 每位工程师都有保持代码优雅的义务
+ * each engineer has a duty to keep the code elegant
+ */
+ -->
+
 <div class="wd-about-nav">
     <div class="title">关于国京</div>
     <div class="item">
