--- a/app/views/account/login.html
+++ b/app/views/account/login.html
@@ -1,3 +1,12 @@
+<!-- 
+/**
+ * @author wangxiao
+ * 
+ * 每位工程师都有保持代码优雅的义务
+ * each engineer has a duty to keep the code elegant
+ */
+ -->
+
 <div wd-header></div>
 <div class="wd-account-login" ng-keyDown="keyDown($event)">
     <div class="banner"></div>
