--- a/app/views/common/header.html
+++ b/app/views/common/header.html
@@ -1,3 +1,12 @@
+<!-- 
+/**
+ * @author wangxiao
+ * 
+ * 每位工程师都有保持代码优雅的义务
+ * each engineer has a duty to keep the code elegant
+ */
+ -->
+
 <div class="wd-header">
     <div class="wd-wrapper">
         <div class="top-tips">
