--- a/app/views/my/change-password.html
+++ b/app/views/my/change-password.html
@@ -1,3 +1,12 @@
+<!-- 
+/**
+ * @author wangxiao
+ * 
+ * 每位工程师都有保持代码优雅的义务
+ * each engineer has a duty to keep the code elegant
+ */
+ -->
+
 <div wd-header></div>
 <div class="wd-my-change-password wd-body">
     <div ng-if="!loading" wd-my-nav></div>
