--- a/app/styles/common/_background-image.scss
+++ b/app/styles/common/_background-image.scss
@@ -2,7 +2,7 @@
  * @author wangxiao
  * 
  * 每位工程师都有保持代码优雅的义务
- * each engineer has a duty to keep the code elegant
+ * Each engineer has the duty to keep the code elegant
  */
 
 @mixin wd-image($name) {
