--- a/app/styles/common/_ng-animation.scss
+++ b/app/styles/common/_ng-animation.scss
@@ -2,7 +2,7 @@
  * @author wangxiao
  * 
  * 每位工程师都有保持代码优雅的义务
- * Each engineer has the duty to keep the code elegant
+ * Each engineer has a duty to keep the code elegant
  */
 
 /*
