--- a/app/styles/common/_base.scss
+++ b/app/styles/common/_base.scss
@@ -1,3 +1,10 @@
+/**
+ * @author wangxiao
+ * 
+ * 每位工程师都有保持代码优雅的义务
+ * Each engineer has a duty to keep the code elegant
+ */
+
 /* 基础色 */
 $standard-deep-black: #000000;
 $standard-black: #282828;
