--- a/app/styles/common/_background-image.scss
+++ b/app/styles/common/_background-image.scss
@@ -1,3 +1,10 @@
+/**
+ * @author wangxiao
+ * 
+ * 每位工程师都有保持代码优雅的义务
+ * Each engineer has a duty to keep the code elegant
+ */
+
 @mixin wd-image($name) {
     display: inline-block;
     background: url('../images/' + $name) no-repeat 50% 50%;
