--- a/app/styles/common/_loading.scss
+++ b/app/styles/common/_loading.scss
@@ -1,3 +1,10 @@
+/**
+ * @author wangxiao
+ * 
+ * 每位工程师都有保持代码优雅的义务
+ * Each engineer has a duty to keep the code elegant
+ */
+
 $wd-loading-background-color: #fff;
 $wd-loading-foreground-color: #000;
 .wd-loading {
