--- a/app/styles/common/_base.scss
+++ b/app/styles/common/_base.scss
@@ -131,6 +131,8 @@ select {
     color: $standard-red;
 }
 .form-item-tips {
+    width: 88%;
+    padding: 2px 15px;
     font-size: 13px;
     color: $standard-black;
     border: #9BD4F4 1px solid;
