--- a/app/styles/my/_my-index.scss
+++ b/app/styles/my/_my-index.scss
@@ -8,6 +8,22 @@
 .wd-my-index {
     padding-top: 30px;
     .btn {
+        margin-top: 10px;
         width: 88%;
+    }
+    .item {
+        margin-bottom: 5px;
+        p {
+            font-size: 16px;
+            .title {
+                font-weight: bold;
+            }
+        }
+        .logout-btn {
+            color: $standard-blue;
+            cursor: pointer;
+            float: right;
+            margin-right: 20px;
+        }
     }
 }
