--- a/app/views/account/login.html
+++ b/app/views/account/login.html
@@ -2,13 +2,21 @@
     <div class="header">
         <div class="logo"></div>
     </div>
-    <div class="form">
-        <input type="text" placeholder="手机号码">
-        <input type="password" placeholder="登录密码">
+    <div ng-if="!loading" class="form">
+        <input type="text" placeholder="手机号码" 
+        ng-model="user.phone"
+        ng-click="user.uiPhoneError = '';">
+        <input type="password" placeholder="登录密码" 
+        ng-model="user.password"
+        ng-click="user.uiPasswordError = '';">
+        <p class="error">{{user.uiPhoneError || user.uiPasswordError || user.uiServerError}}</p>
         <div class="btns">
-            <div class="btn login-btn">登录</div>
+            <div class="btn login-btn" ng-click="login()">登录</div>
             <a href="#/account-register" class="btn register-btn">注册</a>
         </div>
+    </div>
+    <div ng-if="loading" class="form">
+        <div wd-loading></div>
     </div>
     <div class="footer">
         <p>&copy;2014 Guoking.com.hk. All rights reserved.</p>
