[feature] 账户类别分为三类。

--- a/app/views/my/change-password.html
+++ b/app/views/my/change-password.html
@@ -1,12 +1,3 @@
-<!-- 
-/**
- * @author wangxiao
- * 
- * 每位工程师都有保持代码优雅的义务
- * Each engineer has a duty to keep the code elegant
- */
- -->
-
 <div wd-header></div>
 <div class="wd-my-change-password wd-body">
     <div ng-if="!loading" wd-my-nav></div>
@@ -39,7 +30,7 @@
         </div>
         <div ng-if="!isLogin" class="item">
             <p class="title">身份证号码</p>
-            <input type="password" ng-model="userInfo.id_no" ng-blur="checkIdNo()" ng-focus="userInfo.uiIdNoError = '';">
+            <input type="text" ng-model="userInfo.id_no" ng-blur="checkIdNo()" ng-focus="userInfo.uiIdNoError = '';">
             <p class="error">{{userInfo.uiIdNoError}}</p>
         </div>
         <div class="item">
