--- a/app/views/account/open.html
+++ b/app/views/account/open.html
@@ -1,12 +1,3 @@
-<!-- 
-/**
- * @author wangxiao
- * 
- * 每位工程师都有保持代码优雅的义务
- * Each engineer has a duty to keep the code elegant
- */
- -->
-
 <div wd-header></div>
 <div class="wd-account-open wd-body">
     <div class="nav" ng-if="!loading">
@@ -37,7 +28,8 @@
             <p class="form-title">交易范围</p>
             <div class="item">
                 <p class="item-title">品种</p>
-                <input type="checkbox" ng-model="userInfo.stock">证券
+                <input type="checkbox" ng-model="userInfo.usstock">美股
+                <input type="checkbox" ng-model="userInfo.hkstock">港股
                 <input type="checkbox" ng-model="userInfo.future">期货
             </div>
             <p class="form-title">基本资料</p>
