--- a/app/styles/common/_base.scss
+++ b/app/styles/common/_base.scss
@@ -10,7 +10,7 @@ $standard-deep-black: #000000;
 $standard-black: #282828;
 $standard-light-black: #313131;
 $standard-white: #ffffff;
-$standard-blue: #0A5ECC;
+$standard-blue: #2890e0;
 $standard-light-blue: #0086FF;
 $standard-deep-blue: #1C5095;
 $standard-orange: #FE7325;
