[polish] 首页手机号码会被携带到注册页面。

--- a/app/styles/account/_open.scss
+++ b/app/styles/account/_open.scss
@@ -66,6 +66,10 @@
                     width: 50%;
                 }
             }
+            input[type=checkbox] {
+                margin-left: 10px;
+                margin-right: 3px;
+            }
         }
         .fill-form-long {
             padding: 10px 15px;
