--- a/app/styles/common/_base.scss
+++ b/app/styles/common/_base.scss
@@ -66,7 +66,7 @@ p {
     font-size: 13px;
 }
 
-input[type=text], input[type=password] {
+input[type=text], input[type=tel], input[type=email], input[type=password] {
     display: block;
     margin: 5px 0px;
     width: 88%;
